--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.text.Text?>
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0"
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="680.0"
       xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MyController">
     <children>
-        <Button fx:id="save" layoutX="25.0" layoutY="240.0" mnemonicParsing="false"
+        <Button fx:id="save" layoutX="15.0" layoutY="240.0" mnemonicParsing="false"
                 onAction="#clickSaveButton" prefHeight="25.0" prefWidth="100.0" text="saveandtest" />
-        <HBox fx:id="hBox" layoutX="25.0" layoutY="2.0" prefHeight="25.0" prefWidth="400.0">
+        <HBox fx:id="hBox" layoutX="15.0" layoutY="2.0" prefHeight="25.0" prefWidth="400.0">
 
                 <Button fx:id="withbabysteps" mnemonicParsing="false" text="Catalog with babysteps"
                 onAction="#setWithbabysteps">
@@ -24,9 +24,15 @@
 
         </HBox>
         <VBox fx:id="colorPanel" layoutX="460" layoutY="4.0" prefHeight="23.0" prefWidth="100.0" style="-fx-border-color: black" ></VBox>
-        <Label layoutX="25.0" layoutY="50.0" text="Class code"></Label>
-        <TextArea fx:id="textArea2" layoutX="25.0" layoutY="300.0" prefHeight="160.0" prefWidth="550.0"/>
-        <Label layoutX="25.0" layoutY="283.0" text="Test code"></Label>
-        <TextArea fx:id="textArea1" layoutX="25.0" layoutY="68.0" prefHeight="160.0" prefWidth="550.0" />
+        <Label layoutX="15.0" layoutY="50.0" text="Class code"></Label>
+        <Label layoutX="435.0" layoutY="50.0" text="test results"></Label>
+        <TextArea fx:id="textAreaForTest" layoutX="15.0" layoutY="300.0" prefHeight="160.0" prefWidth="400.0"/>
+        <Label fx:id="textAreaForTestResults" layoutX="435.0" layoutY="68.0" prefHeight="390.0" prefWidth="230.0" />
+
+
+
+
+        <Label layoutX="15.0" layoutY="283.0" text="Test code"></Label>
+        <TextArea fx:id="textAreaForClass" layoutX="15.0" layoutY="68.0" prefHeight="160.0" prefWidth="400.0" />
     </children>
 </Pane>
