--- a/project_qiaoxi/src/sample/sample.fxml
+++ b/project_qiaoxi/src/sample/sample.fxml
@@ -10,6 +10,8 @@
     <children>
         <Button fx:id="save" layoutX="15.0" layoutY="635.0" mnemonicParsing="false"
                 onAction="#clickSaveButton" prefHeight="25.0" prefWidth="100.0" text="saveandtest" />
+        <Button fx:id="back" layoutX="155.0" layoutY="635.0" mnemonicParsing="false"
+                onAction="#clickSaveButton" prefHeight="25.0" prefWidth="100.0" text="backtolast" />
         <HBox fx:id="hBox" layoutX="15.0" layoutY="2.0" prefHeight="25.0" prefWidth="400.0">
 
                 <Button fx:id="withbabysteps" mnemonicParsing="false" text="Catalog with babysteps"
