--- a/project_qiaoxi/src/sample/sample.fxml
+++ b/project_qiaoxi/src/sample/sample.fxml
@@ -10,10 +10,11 @@
     <children>
         <Button fx:id="save" layoutX="15.0" layoutY="635.0" mnemonicParsing="false"
                 onAction="#clickSaveButton" prefHeight="25.0" prefWidth="100.0" text="saveandtest" />
-        <Button fx:id="back" layoutX="155.0" layoutY="635.0" mnemonicParsing="false"
-                onAction="#clickSaveButton" prefHeight="25.0" prefWidth="100.0" text="backtolast" />
+        <Button fx:id="back" layoutX="165.0" layoutY="635.0" mnemonicParsing="false"
+                onAction="#clickBackButton" prefHeight="25.0" prefWidth="100.0" text="backtolast" />
+        <Button fx:id="analysis" layoutX="315.0" layoutY="635.0" mnemonicParsing="false"
+            onAction="#clickAnalysisButton" prefHeight="25.0" prefWidth="100.0" text="analysis" />
         <HBox fx:id="hBox" layoutX="15.0" layoutY="2.0" prefHeight="25.0" prefWidth="400.0">
-
                 <Button fx:id="withbabysteps" mnemonicParsing="false" text="Catalog with babysteps"
                 onAction="#setWithbabysteps">
                 </Button>
@@ -22,14 +23,17 @@
                 </Button>
         </HBox>
         <VBox fx:id="colorPanel" layoutX="435" layoutY="4.0" prefHeight="23.0" prefWidth="200.0" style="-fx-border-color: black" ></VBox>
-        <HBox  layoutX="435" layoutY="350"  prefHeight="80" prefWidth="200" >
-            <Label layoutX="435" layoutY="350" prefHeight="20" alignment="TOP_LEFT" text="Tracking"/>
-            <HBox fx:id="tracking" layoutX="435" layoutY="370" alignment="CENTER_LEFT" />
+        <HBox  layoutX="435" layoutY="550"  prefHeight="80" prefWidth="200" >
+            <Label layoutX="435" layoutY="550" prefHeight="20" alignment="TOP_LEFT" text="Tracking"/>
+            <HBox fx:id="tracking" layoutX="435" layoutY="550" alignment="CENTER_LEFT" />
         </HBox>
         <Label layoutX="15.0" layoutY="50.0" text="Class code"></Label>
-        <Label layoutX="435.0" layoutY="50.0" text="test results"></Label>
+
         <TextArea fx:id="textAreaForTest" layoutX="15.0" layoutY="370.0" prefHeight="260.0" prefWidth="400.0"/>
         <Label fx:id="testResults" layoutX="435.0" layoutY="68.0" prefHeight="260.0" prefWidth="400.0" />
+        <Label layoutX="435.0" layoutY="50.0" text="test results"></Label>
+        <Label fx:id="compileResults" layoutX="435.0" layoutY="370.0" prefHeight="260.0" prefWidth="400.0" />
+        <Label layoutX="435.0" layoutY="352.0" text="compile results"></Label>
         <Label layoutX="15.0" layoutY="350.0" text="Test code"></Label>
         <TextArea fx:id="textAreaForClass" layoutX="15.0" layoutY="68.0" prefHeight="270.0" prefWidth="400.0" />
     </children>
