--- a/project_qiaoxi/src/sample/sample.fxml
+++ b/project_qiaoxi/src/sample/sample.fxml
@@ -23,17 +23,18 @@
                 </Button>
         </HBox>
         <VBox fx:id="colorPanel" layoutX="435" layoutY="4.0" prefHeight="23.0" prefWidth="200.0" style="-fx-border-color: black" ></VBox>
-        <HBox  layoutX="435" layoutY="550"  prefHeight="80" prefWidth="200" >
-            <Label layoutX="435" layoutY="550" prefHeight="20" alignment="TOP_LEFT" text="Tracking"/>
-            <HBox fx:id="tracking" layoutX="435" layoutY="550" alignment="CENTER_LEFT" />
+        <Label fx:id="babystepswarning" layoutX="750" layoutY="4.0" prefHeight="23.0" prefWidth="87.0" style="-fx-border-color: black"></Label>
+        <HBox  layoutX="435" layoutY="550"  prefHeight="110" prefWidth="400"  style="-fx-border-color: grey">
+            <Label layoutX="435" layoutY="590" prefHeight="20" prefWidth="400" alignment="TOP_LEFT" text="Tracking"/>
+            <HBox fx:id="tracking" layoutX="435" layoutY="550" prefHeight="100" prefWidth="400"  alignment="CENTER_LEFT" />
         </HBox>
         <Label layoutX="15.0" layoutY="50.0" text="Class code"></Label>
 
         <TextArea fx:id="textAreaForTest" layoutX="15.0" layoutY="370.0" prefHeight="260.0" prefWidth="400.0"/>
-        <Label fx:id="testResults" layoutX="435.0" layoutY="68.0" prefHeight="260.0" prefWidth="400.0" />
-        <Label layoutX="435.0" layoutY="50.0" text="test results"></Label>
-        <Label fx:id="compileResults" layoutX="435.0" layoutY="370.0" prefHeight="260.0" prefWidth="400.0" />
-        <Label layoutX="435.0" layoutY="352.0" text="compile results"></Label>
+        <Label fx:id="compileResults" layoutX="435.0" layoutY="68.0" prefHeight="260.0" prefWidth="400.0" style="-fx-border-color: grey"/>
+        <Label layoutX="435.0" layoutY="50.0" text="compile results"></Label>
+        <Label fx:id="testResults" layoutX="435.0" layoutY="370.0" prefHeight="175.0" prefWidth="400.0" style="-fx-border-color: grey"/>
+        <Label layoutX="435.0" layoutY="352.0" text="test results"></Label>
         <Label layoutX="15.0" layoutY="350.0" text="Test code"></Label>
         <TextArea fx:id="textAreaForClass" layoutX="15.0" layoutY="68.0" prefHeight="270.0" prefWidth="400.0" />
     </children>
