--- a/project_qiaoxi/src/sample/sample.fxml
+++ b/project_qiaoxi/src/sample/sample.fxml
@@ -14,28 +14,32 @@
                 onAction="#clickBackButton" prefHeight="25.0" prefWidth="100.0" text="backtolast" />
         <Button fx:id="analysis" layoutX="315.0" layoutY="635.0" mnemonicParsing="false"
             onAction="#clickAnalysisButton" prefHeight="25.0" prefWidth="100.0" text="analysis" />
-        <HBox fx:id="hBox" layoutX="15.0" layoutY="2.0" prefHeight="25.0" prefWidth="400.0">
-                <Button fx:id="withbabysteps" mnemonicParsing="false" text="Catalog with babysteps"
-                onAction="#setWithbabysteps">
+        <HBox fx:id="hBox" layoutX="15.0" layoutY="5.0" prefHeight="25.0" prefWidth="420.0" alignment="CENTER">
+                <Button fx:id="withbabysteps" mnemonicParsing="false"
+                onAction="#setWithbabysteps" text="CATALOG WITH babysteps">
                 </Button>
-                <Button fx:id="withoutbabysteps"   mnemonicParsing="false" text="Catalog without babysteps"
+<Label prefHeight="25.0" prefWidth="6.0"/>
+                <Button fx:id="withoutbabysteps"   mnemonicParsing="false" text="CATALOG WITHOUT babysteps"
                         onAction="#setWithoutbabysteps">
                 </Button>
         </HBox>
-        <VBox fx:id="colorPanel" layoutX="435" layoutY="4.0" prefHeight="23.0" prefWidth="200.0" style="-fx-border-color: black" ></VBox>
-        <Label fx:id="babystepswarning" layoutX="750" layoutY="4.0" prefHeight="23.0" prefWidth="87.0" style="-fx-border-color: black"></Label>
-        <HBox  layoutX="435" layoutY="550"  prefHeight="110" prefWidth="400"  style="-fx-border-color: grey">
-            <Label layoutX="435" layoutY="590" prefHeight="20" prefWidth="400" alignment="TOP_LEFT" text="Tracking"/>
-            <HBox fx:id="tracking" layoutX="435" layoutY="550" prefHeight="100" prefWidth="400"  alignment="CENTER_LEFT" />
-        </HBox>
+        <Label layoutX="595" layoutY="5.0" prefHeight="23.0" text="status-->" style="-fx-text-fill: grey"/>
+        <VBox fx:id="colorPanel" layoutX="660" layoutY="5.0" prefHeight="23.0" prefWidth="195.0"  ></VBox>
+        <Label layoutX="450" layoutY="5.0" prefHeight="23.0" text="clock-->" style="-fx-text-fill: grey"/>
+        <VBox fx:id="babystepsclock" layoutX="511" layoutY="5.0" prefHeight="23.0" prefWidth="50.0" alignment="CENTER" style="-fx-border-color:lightgrey" ></VBox>
+        <VBox  layoutX="450" layoutY="590"  prefHeight="110" prefWidth="405"  >
+            <Label layoutX="450" layoutY="590" prefHeight="20" alignment="TOP_LEFT" text="Tracking"/>
+            <HBox fx:id="tracking"  prefHeight="20"   layoutY="650" alignment="CENTER_LEFT" style="-fx-border-color:grey" />
+        </VBox>
+        <Label layoutX="750" layoutY="640" prefHeight="20" text="©2016 - LIU QiaoXi (HHU)" style="-fx-font-size:8" textAlignment="LEFT" />
         <Label layoutX="15.0" layoutY="50.0" text="Class code"></Label>
 
-        <TextArea fx:id="textAreaForTest" layoutX="15.0" layoutY="370.0" prefHeight="260.0" prefWidth="400.0"/>
-        <Label fx:id="compileResults" layoutX="435.0" layoutY="68.0" prefHeight="260.0" prefWidth="400.0" style="-fx-border-color: grey"/>
-        <Label layoutX="435.0" layoutY="50.0" text="compile results"></Label>
-        <Label fx:id="testResults" layoutX="435.0" layoutY="370.0" prefHeight="175.0" prefWidth="400.0" style="-fx-border-color: grey"/>
-        <Label layoutX="435.0" layoutY="352.0" text="test results"></Label>
+        <TextArea fx:id="textAreaForTest" layoutX="15.0" layoutY="370.0" prefHeight="260.0" prefWidth="420.0"/>
+        <Label fx:id="compileResults" layoutX="450.0" layoutY="68.0" prefHeight="268.0" prefWidth="405.0" style="-fx-border-color: grey"/>
+        <Label layoutX="450.0" layoutY="50.0" text="compile results"></Label>
+        <Label fx:id="testResults" layoutX="450.0" layoutY="370.0" prefHeight="205.0" prefWidth="405.0" style="-fx-border-color: grey"/>
+        <Label layoutX="450.0" layoutY="352.0" text="test results"></Label>
         <Label layoutX="15.0" layoutY="350.0" text="Test code"></Label>
-        <TextArea fx:id="textAreaForClass" layoutX="15.0" layoutY="68.0" prefHeight="270.0" prefWidth="400.0" />
+        <TextArea fx:id="textAreaForClass" layoutX="15.0" layoutY="68.0" prefHeight="270.0" prefWidth="420.0" />
     </children>
 </Pane>
